--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div> <img src="a.png" alt="aa" class="image-box"> <p>Lorem ipsum dolor amet set</p> </div>
             <div> <img src="a.png" alt="aa" class="image-box"> <p>Lorem ipsum dolor amet set</p> </div>
             <div> <img src="a.png" alt="aa" class="image-box"> <p>Lorem ipsum dolor amet set</p> </div>
-            <div> <img src="a.png" alt="aa" class="image-box"> <p>Lorem ipsum dolor amet set</p> </div>
+            <div> <img src="che.jpg" alt="aa" class="image-box"> <p>Lorem ipsum dolor amet set</p> </div>
         </div>
     </section>
 
